Primer seccion - terminada

--- a/practica02css3/index.html
+++ b/practica02css3/index.html
@@ -22,10 +22,10 @@
 		</nav>
 	</header>
 	<section id="primerseccion">
-		<article>
+		<article id="secc01art01">
 			<img src="img/slide.jpg" alt="Slide">
 		</article>
-		<article>
+		<article id="secc01art02">
 			<span class="colorrosa letragrande nito">
 				We can offer...
 			</span>
@@ -40,7 +40,7 @@
 				<li>Great Customer Service</li>
 			</ul>
 		</article>
-		<img src="img/bg_offer.png" alt="Offer">
+		<img src="img/bg_offer.png" alt="Offer" id="bgoffer">
 	</section>
 	<section id="segundaseccion">
 		<article>
