--- a/practica01css/index.html
+++ b/practica01css/index.html
@@ -2,12 +2,13 @@
 <html lang="es">
 <head>
 	<meta charset="UTF-8">
-	<title>Práctica 01</title>
+	<title>Práctica 01 CSS3</title>
+	<link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
 	<header>
-		<img src="img/resplandor.png" alt="fondo">
-		<img src="img/logo.png" id="logo" alt="logo">
+		<img src="img/resplandor.png" alt="">
+		<img src="img/logo.png" id="logo" alt="">
 		<nav>
 			<ul>
 				<li>Inicio</li>
@@ -18,62 +19,44 @@
 				<li>Sección</li>
 			</ul>
 			<form action="#">
-				<input type="text">
+				<input type="search" placeholder="Buscar aquí....">
 				<input type="button" value="buscar">
 			</form>
 		</nav>
 	</header>
 	<section id="seccion01">
 		<article>
-			<img src="img/slide2.jpg" alt="slide">
+			<img src="img/slide2.jpg" alt="">
 		</article>
 	</section>
 	<section id="seccion02">
 		<article>
-			<img src="img/separador.jpg" alt="separador">
+			<img src="img/separador.jpg" alt="">
 			<br>
-			<span class="unaSeccion nito">Una sección</span>
+			<span class="unaSeccion">Una sección</span>
 			<br>
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque quidem ex, saepe nihil consequuntur rem voluptatem dolorum neque eligendi vel corporis, unde provident ipsa consectetur. Iste officiis, inventore sint. Repellendus.
-			<br>
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam voluptatum est odit vitae cum laborum magni dolorem veritatis voluptates repellendus doloremque, suscipit maiores. Eligendi quia quam laudantium. Earum, voluptate similique.
+			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores harum recusandae aperiam ullam maiores, provident, porro veritatis atque temporibus, ipsum eius? Excepturi voluptas saepe vel earum quod neque odit reprehenderit.
 			<p></p>
 			<input type="submit" value="ver más">
 		</article>
 		<article>
-			<img src="img/separador.jpg" alt="separador">
+			<img src="img/separador.jpg" alt="">
 			<br>
-			<span class="otraSeccion nito">Otra sección</span>
+			<span class="otraSeccion">Otra sección</span> 
 			<br>
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse dolor perspiciatis iste incidunt optio iusto facilis vero minus, atque commodi praesentium, architecto, reiciendis similique, cumque sequi at adipisci! Pariatur, consequatur?
+			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam numquam tenetur, quas saepe esse eius nisi commodi vel deleniti laboriosam reprehenderit laborum vero natus incidunt facere enim eaque maiores! Minus.
 			<br>
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit. In aperiam sapiente perspiciatis aliquid recusandae nobis quisquam cumque consequuntur quos sunt. Perferendis enim, esse eum voluptatem id, quos animi vitae veniam!
+			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro nobis tenetur natus maiores, deleniti omnis, quam rerum ullam similique culpa quas cum asperiores, accusantium eum nemo laborum. Quibusdam, tempora mollitia.
 			<p></p>
 			<input type="submit" value="ver más">
 		</article>
 		<article>
-			<img src="img/separador.jpg" alt="separador">
+			<img src="img/separador.jpg" alt="">
 			<br>
-			<span class="otraSeccion nito">Un vídeo</span>
+			<span class="otraSeccion">Un vídeo</span> 
 			<br>
-			<img src="img/video.jpg" alt="video">
+			<img src="img/video.jpg" alt="">
 		</article>
 	</section>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
