--- a/selectoresavanzados.html
+++ b/selectoresavanzados.html
@@ -30,6 +30,31 @@
 	<p>Tercer Párrafo</p>
 	<p>Cuarto Párrafo</p>
 	<p>Quinto Párrafo</p>
+
+	<section id="resumen">Resumen</section>
+	<section id="experimento">Experimento</section>
+	<section id="pruebas">Pruebas</section>
+	<section id="resultados">Resultados</section>
+	<section id="conclusiones">Conclusiones</section>
+	<section id="referencias">Referencias</section>
+
+	<ul>
+		<li>Primero</li>
+		<li>Segundo</li>
+		<li>Tercero</li>
+		<li>Cuarto</li>
+		<li>Quinto</li>
+		<li>Sexto</li>
+		<li>Séptimo</li>
+		<li>Octavo</li>
+		<li>Noveno</li>
+		<li>Décimo</li>
+	</ul>
+
+	<p>
+		Lorem ipsum dolor sit amet, consectetur  <br>adipisicing elit. Ducimus ullam voluptatum  <br>consectetur, laboriosam ex porro, repellat  <br>quaerat aliquam assumenda nesciunt, voluptatem <br> at temporibus odit voluptate perferendis  <br>
+		magni! Blanditiis, eveniet, nobis. <br>
+	</p>
 </body>
 </html>
 
