Random user electron

--- a/randomuserelectron/index.html
+++ b/randomuserelectron/index.html
@@ -11,6 +11,7 @@
 		<nav>
 			<ul>
 				<li> <button id="btnUsuario">Usuario</button> </li>	
+				<li> <button id="btnPDF">PDF</button> </li>	
 			</ul>
 		</nav>
 	</header>
@@ -32,7 +33,7 @@
 	<footer>
 		Random User Proyecto PW &copy; 2018
 	</footer>
-	<script src="js/eventos.js"></script>
+	<script src="js/index.js"></script>
 </body>
 </html>
 
